--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "db:init": "tsx src/db/initial/db-init.ts"
   },
   "author": "Andrii.Stetsiuk",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.10",
+    "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.18.0",
@@ -38,6 +40,7 @@
   "dependencies": {
     "body-parser": "^1.20.3",
     "express": "^4.21.2",
+    "http-errors": "^2.0.0",
     "pg": "^8.13.1"
   }
 }
