--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "dev": "tsx watch src/index.ts",
-    "db:init": "tsx src/db/initial/db-init.ts"
+    "seed": "tsx prisma/seed.ts"
   },
   "author": "Andrii.Stetsiuk",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "@types/http-errors": "^2.0.4",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
@@ -44,7 +45,7 @@
     "typescript-eslint": "^8.21.0"
   },
   "dependencies": {
-    "@prisma/client": "^6.3.1",
+    "@prisma/client": "^6.6.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.7",
@@ -52,7 +53,9 @@
     "express": "^4.21.2",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
     "pg": "^8.13.1",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   }
 }
