--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "build": "tsc && tsc-alias\n",
+    "start": "node dist/index.js",
     "dev": "tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
@@ -20,7 +21,6 @@
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^5.0.0",
     "@types/http-errors": "^2.0.4",
-    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
@@ -34,12 +34,11 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "globals": "^15.14.0",
-    "jest": "^29.7.0",
     "nodemon": "^3.1.9",
     "prettier": "^3.4.2",
     "prisma": "^6.3.1",
     "supertest": "^7.0.0",
-    "ts-jest": "^29.2.5",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.21.0"
