--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "build": "tsc && tsc-alias\n",
-    "start": "node dist/index.js",
+    "start": "tsx src/index.ts",
     "dev": "tsx watch src/index.ts",
     "seed": "tsx prisma/seed.ts"
   },
@@ -24,6 +23,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.10",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.11.11",
     "@types/supertest": "^6.0.2",
     "dotenv": "^16.4.7",
@@ -53,6 +53,7 @@
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.5",
     "pg": "^8.13.1",
     "uuid": "^11.1.0",
     "zod": "^3.24.1"
